@@ -1,4 +1,4 @@
 #define BUILD_COMMIT_ID "@VERSION@"
 #define PROJECT_VERSION "0.0.1"
-#define PROJECT_VERSION_BUILD_NO "Sapphire-5.2"
+#define PROJECT_VERSION_BUILD_NO "Sapphire-5.3"
 #define PROJECT_VERSION_LONG PROJECT_VERSION "." PROJECT_VERSION_BUILD_NO " (" BUILD_COMMIT_ID ")"
